SAV-30: Correct div class to avoid whitespace on mobile
And remove padding-left on ul in header

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -102,7 +102,7 @@ header .intro-text .skills {
 
 header .right-frame {
     text-align: left;
-    
+    padding-left: 0;
     margin-top: 50px;
 }
 
